--- a/package.json
+++ b/package.json
@@ -10,26 +10,45 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.0",
-    "@prisma/client": "^4.15.0",
+    "@docsearch/react": "^3.6.0",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.2",
     "@stripe/stripe-js": "^1.54.0",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
+    "@types/mdx": "^2.0.12",
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "autoprefixer": "10.4.14",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "contentlayer": "^0.3.4",
+    "crisp-sdk-web": "^1.0.22",
+    "crypto-js": "^4.2.0",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^14.1.4",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.8.0",
+    "framer-motion": "^11.0.25",
+    "fumadocs-core": "^10.1.3",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^14.1.0",
+    "markdown-it-attrs": "^4.1.6",
     "micro-cors": "^0.1.1",
-    "next": "^13.4.4",
-    "next-auth": "^4.22.1",
+    "next": "^14.1.4",
+    "next-auth": "^4.24.7",
+    "next-docs-ui": "^7.1.2",
+    "next-docs-zeta": "^7.1.2",
+    "nprogress": "^0.2.0",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "resend": "^3.2.0",
     "stripe": "^12.8.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/micro-cors": "^0.1.3",
-    "prisma": "^4.15.0"
+    "prisma": "^4.16.2"
   }
 }
